tests/should-fail/semantics/null-as-bool.j
globals
    boolean b = null
endglobals
